fixed the bug of overlapping classes

--- a/layouts/mediaqueries.css
+++ b/layouts/mediaqueries.css
@@ -41,9 +41,10 @@
   }
 
   .section__pic-container {
-    width: 275px;
-    height: 275px;
-    margin: 0 auto 2rem;
+    width: 400px;
+    height: 400px;
+    margin: 2rem auto 2rem;
+    justify-content: center;
   }
 
   .about-containers {
