--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 /* GENERAL STYLES */
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Macondo&display=swap');
 
 * {
   margin: 0;
@@ -57,6 +58,7 @@ a:hover {
 }
 
 .logo {
+  font-family: 'Macondo', cursive;
   font-size: 2rem;
 }
 
